# unified-qec

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: limitations.md
donotpush/: Integrating Section 7 Components.md
rtl/: README.md
rtl/sim/: benchmark_harness.sv
rtl/src/: apex_lutram_tracker.sv  baseline_bram_tracker.sv
src/unified_qec/: __init__.py
src/unified_qec/calibration/: __init__.py  calibrate.py  circuit.py  config.py  physics.py  simulator.py
src/unified_qec/data/: __init__.py  converters.py  webdataset_writer.py  zarr_store.py
src/unified_qec/decoding/: __init__.py  asr_mp.py  dem_utils.py  sinter_api.py  union_find.py
src/unified_qec/diagnostics/: __init__.py  aubry_andre.py  gst_benchmark.py  hamiltonian_learner.py  spam_noise.py
src/unified_qec/experiments/: __init__.py  benchmark_sinter.py  full_pipeline.py
src/unified_qec/feedback/: __init__.py  controller.py  decoder_weights.py  frequency_analysis.py
src/unified_qec/physics/: __init__.py  burst_error.py  cosmic_ray.py  leakage.py
src/unified_qec/remediation/: __init__.py  pulse_synthesis.py
src/unified_qec/simulation/: __init__.py  noise_models.py  stim_cirq_bridge.py  surface_code.py
src/unified_qec/zoo/: __init__.py  checkpoint.py  hub.py  neural_decoder.py
tests/: test_data.py  test_imports.py  test_integration.py  test_sinter_api.py  test_zoo.py
